--- a/public/templates/aide/condition.html
+++ b/public/templates/aide/condition.html
@@ -30,15 +30,16 @@
 
                             <h3 translate>Entente relative aux Conditions du Service.</h3>
 
-                            <p translate>Les pages suivantes contiennent notre entente relative aux Conditions du service (« Conditions du service »). Ces conditions du service régissent tous nos Services, et tous ces Services proposés sont soumis à votre acceptation sans modification des présentes Conditions de Services. De plus, dans les Sections ci-après. Ces Conditions du service incluent en référence les ententes, conditions, politiques, exigences et directives suivantes :
-                                • nos Conditions d'utilisation peuvent être consultées ici ;
-                                • notre Politique sur la confidentialité peut être consultée ici ;
-                                • notre Politique relative aux cookies ici;
-                                • pour les Organisateurs publiant des événements avec des billets payants, notre Accord marchant peut être consulté ici ;
-                                • les Conditions de la Politique de remboursement des participants peut être consultée ici ;
-                                • la Politique sur la marque commerciale et le copyright peut être consultée ici ;
-                                • pour les utilisateurs de nos Interfaces de programmes d'applications, les Conditions relatives à l'utilisation des API peut être consultée ici ;
-                                • des Conditions complémentaires affichées avec les Services complémentaires que vous pourriez être amenés à utiliser ou à acheter de temps à autre.
+                            <p>
+                                <div translate>Les pages suivantes contiennent notre entente relative aux Conditions du service (« Conditions du service »). Ces conditions du service régissent tous nos Services, et tous ces Services proposés sont soumis à votre acceptation sans modification des présentes Conditions de Services. De plus, dans les Sections ci-après. Ces Conditions du service incluent en référence les ententes, conditions, politiques, exigences et directives suivantes :</div>
+                                <div translate>• nos Conditions d'utilisation peuvent être consultées ici ;</div>
+                                <div translate>• notre Politique sur la confidentialité peut être consultée ici ;</div>
+                                <div translate>• notre Politique relative aux cookies ici;</div>
+                                <div translate>• pour les Organisateurs publiant des événements avec des billets payants, notre Accord marchant peut être consulté ici ;</div>
+                                <div translate>• les Conditions de la Politique de remboursement des participants peut être consultée ici ;</div>
+                                <div translate>• la Politique sur la marque commerciale et le copyright peut être consultée ici ;</div>
+                                <div translate>• pour les utilisateurs de nos Interfaces de programmes d'applications, les Conditions relatives à l'utilisation des API peut être consultée ici ;</div>
+                                <div translate>• des Conditions complémentaires affichées avec les Services complémentaires que vous pourriez être amenés à utiliser ou à acheter de temps à autre.</div>
 
                             </p>
                             <h2 translate>Votre acceptation</h2>
@@ -86,16 +87,17 @@
 
                             <h3 translate>Utilisateurs des Communautés économiques régionales (CER) de l’Union africaine</h3>
 
-                            <p translate>Si vous êtes un utilisateur situé dans un pays de :
-                                	l'Union du Maghreb arabe (UMA) ;
-                                	la Communauté économique des États de l'Afrique de l'Ouest (CEDEAO) ;
-                                	la Communauté d'Afrique de l'Est (CAE) ;
-                                	l'Autorité intergouvernementale pour le développement (IGAD) ;
-                                	la Communauté de développement de l'Afrique australe (SADC) ;
-                                	le Marché commun de l'Afrique de l'Est et de l'Afrique australe (COMESA) ;
-                                	La Communauté économique des États de l'Afrique centrale (CEEAC) ;
-                                	La Communauté des États sahélo-sahariens (CEN-SAD) ;
-                                et que vous êtes une personne agissant à des fins en dehors de tout commerce, affaire, artisanat ou profession lors de l'utilisation des Services, alors les modifications suivantes destinées aux consommateurs dans l'Union européenne disponibles ici s'appliquent à votre situation.</p>
+                            <p>
+                                <div translate>Si vous êtes un utilisateur situé dans un pays de :</div>
+                                <div translate>	l'Union du Maghreb arabe (UMA) ;</div>
+                                <div translate>	la Communauté économique des États de l'Afrique de l'Ouest (CEDEAO) ;</div>
+                                <div translate>	la Communauté d'Afrique de l'Est (CAE) ;</div>
+                                <div translate>	l'Autorité intergouvernementale pour le développement (IGAD) ;</div>
+                                <div translate>	la Communauté de développement de l'Afrique australe (SADC) ;</div>
+                                <div translate>	le Marché commun de l'Afrique de l'Est et de l'Afrique australe (COMESA) ;</div>
+                                <div translate>	La Communauté économique des États de l'Afrique centrale (CEEAC) ;</div>
+                                <div translate>	La Communauté des États sahélo-sahariens (CEN-SAD) ;</div>
+                                <div translate>et que vous êtes une personne agissant à des fins en dehors de tout commerce, affaire, artisanat ou profession lors de l'utilisation des Services, alors les modifications suivantes destinées aux consommateurs dans l'Union européenne disponibles ici s'appliquent à votre situation.</p></div>
 
                             <h3 translate>Utilisateurs dans l'Union européenne</h3>
 
