--- a/public/templates/aide/cookies.html
+++ b/public/templates/aide/cookies.html
@@ -88,22 +88,25 @@
 
                             <p translate>Ces technologies nous permettent de vous proposer des publicités sur et en dehors des Services. En utilisant ces technologies, nous espérons mieux adapter ces publicités à vos intérêts. Parfois, on parle de publicité en ligne comportementale, basée sur les intérêts ou reciblée. À compter de la date des présentes, nous utilisons les technologies de Adroll, Chango, Google, Media Math, Perfect Audience, Quantcast, Retargeter et Yahoo! à ces fins. Bon nombre de ces fournisseurs participent à des cadres volontaires qui vous permettent de vous désabonner de ce genre de publicité. Vous pouvez gérer vos désabonnements auprès de ces fournisseurs de services tiers qui participent à ces cadres de désabonnement sur les sites suivants selon votre localisation :</p>
 
-                            <p translate>• Australia
-                                • Canada
-                                • EU
-                                • United States
+                            <p>
+                                <div translate>• Australia</div>
+                                <div translate>• Canada</div>
+                                <div translate>• EU</div>
+                                <div translate>• United States</div>
                             </p>
 
                             <p translate>En outre, tous ces fournisseurs de services tiers peuvent ne pas participer à tout moment à chaque cadre volontaire, donc nous avons inclus des liens vers leur cadres de désabonnement individuels pour que vous puissiez contrôler vos préférences directement auprès de chaque fournisseur de service tiers :</p>
 
-                            <p translate>• Adroll
-                                • Rubicon
-                                • Google
-                                • Media Math
-                                • Perfect Audience
-                                • Quantcast
-                                • Retargeter
-                                • Yahoo!</p>
+                            <p>
+                                <div translate>• Adroll</div>
+                                <div translate>• Rubicon</div>
+                                <div translate>• Google</div>
+                                <div translate>• Media Math</div>
+                                <div translate>• Perfect Audience</div>
+                                <div translate>• Quantcast</div>
+                                <div translate>• Retargeter</div>
+                                <div translate>• Yahoo!</div>
+                            </p>
                             <h2 translate>Y a-t-il d'autres utilisateurs de ces technologies sur vos services ?</h2>
                             <p translate>La plupart des cookies et autres technologies décrits ci-dessus sur nos Services sont paramétrés par nos soins (cookies internes) ou sont utilisées en lien avec les Services et paramétrés par les fournisseurs de services tiers selon nos directions (« Cookies tiers »). Nous pouvons utiliser des Cookies tiers pour chacune des utilisations énoncées ci-dessus. Par exemple, nous utilisons des technologies de Google Analytics, Omniture et Mixpanel, entre autres, pour mesurer la performance/les analyses et nous utilisons des technologies de Facebook pour fournir des fonctionnalités Facebook Connect. Occasionnellement, un organisateur peut utiliser des technologies similaires sur ses pages d'événement pour l'une des fins énoncées ci-dessus.</p>
 
