--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col-lg-4 col-sm-4 col-md-4">
                 <ul class="nav">
-                    <h3 translate>Rechercher des événmenets</h3>
+                    <h3 translate>Rechercher des événements</h3>
                     <li><a ui-sref="events({target:'Yaoundé',id:'ville'})" translate>Evénements à Yaoundé</a></li>
                     <li><a ui-sref="events({target:'Douala',id:'ville'})" translate>Evénements à Douala</a></li>
                     <li><a ui-sref="events({target:'Dakar',id:'ville'})" translate>Evénements à Dakar</a></li>
