--- a/public/templates/event/form-events.html
+++ b/public/templates/event/form-events.html
@@ -3,7 +3,7 @@
         <div class="row no-padding">
             <div class="col-lg-6 col-sm-6">
                 <h1 class="title" ng-if="id==undefined" translate>Créer un événement</h1>
-                <h1 class="title" ng-if="id!=undefined" translate>Moifier un événement</h1>
+                <h1 class="title" ng-if="id!=undefined" translate>Modifier un événement</h1>
             </div>
             <div class="col-lg-6 col-sm-6" ng-if="id==undefined" style="margin-top: 3%; text-align: right;">
                 <button class="btn btn-main btn-reverse" ng-click="save_event()" translate>Sauvegarde</button>
