--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -12,20 +12,23 @@
         <div class="clearfix"></div>
         <div class="row no-padding card item"
              style="margin:0 15px 15px"
-             dir-paginate="e in events |filter:searchKey | orderBy : '-name' : true| itemsPerPage: par_page "
+             dir-paginate="e in events |filter:searchKey | orderBy : '-created_at' : false| itemsPerPage: par_page "
         >
             <div class="col-lg-3">
                 <div ui-sref="details({nom:e.name+'/'+e.id})" class="image" style="height:100px; cursor: pointer">
                     <img ng-src="{{e.banner_picture}}" class="img-responsive" alt="{{e.name}}"/>
                 </div>
-                <div class="price">
+                <div class="price" ng-if="e.tickets[0].amount!=undefined">
                     {{e.tickets[0].amount}} Fcfa
+                </div>
+                <div class="price" ng-if="e.tickets[0].amount==undefined" translate>
+                    Gratuit
                 </div>
             </div>
             <div class="col-lg-9">
                 <div class="item-9" ui-sref="details({nom:e.name+'/'+e.id})">
                     <div class="date">du {{e.date_debut}} au {{e.date_fin}}</div>
-                    <div class="titre">{{e.old_id}}{{e.name}}</div>
+                    <div class="titre">{{e.name}}</div>
                     <div class="lieu" style="position: absolute;bottom: 0;">{{e.adress.name}}, {{e.town.name}}</div>
                 </div>
                 <div class="card-action">
