--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -20,12 +20,12 @@
             <div class="col-lg-4 col-sm-4 col-md-4">
                 <ul class="nav">
                     <h3 translate>Restons connectés</h3>
-                    <li><a href="mailto:eventmoboa@gmail.com"><i class="fa fa-envelope"></i>
+                    <li><a href="mailto:eventmboa@gmail.com"><i class="fa fa-envelope"></i>
                         <ff translate>Contacter l'assistance</ff>
                     </a></li>
                     <li><a href="https://www.facebook.com/eventmboa/"><i class="fa fa-facebook"></i> Facebook</a></li>
                     <li><a href="https://twitter.com/Event_Mboa"><i class="fa fa-twitter"></i> Twitter</a></li>
-                    <li><a href=""><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/company/eventmboa"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
                     <li><a href="https://www.instagram.com/eventmboa/"><i class="fa fa-instagram"></i> Instagram</a>
                     </li>
                     <li><a href="https://plus.google.com/u/0/108139670497252318920"><i class="fa fa-google-plus"></i>
@@ -46,11 +46,11 @@
         <div class="row">
             <div class="col-lg-12 col-sm-12 col-md-12 spec text-center">
                 <ul class="nav navbar">
-                    <li><a href="" translate>A propos</a></li>
+                    <li><a ui-sref="apropos" translate>A propos</a></li>
                     <li><a ui-sref="aide" translate>Aide</a></li>
-                    <li><a href="" translate>Conditions d'utilisation</a></li>
-                    <li><a href="" translate>Confidentialité</a></li>
-                    <li><a href="" translate>Cookies</a></li>
+                    <li><a ui-sref="condition" translate>Conditions d'utilisation</a></li>
+                    <li><a ui-sref="confidentialite" translate>Confidentialité</a></li>
+                    <li><a ui-sref="cookies" translate>Cookies</a></li>
                 </ul>
             </div>
             <!--<div class="col-lg-3 col-sm-3 col-md-3" ng-controller="AppCtrl">-->
