--- a/public/templates/user/billet.html
+++ b/public/templates/user/billet.html
@@ -43,7 +43,7 @@
                                     <div class="item-9" >
                                         <div class="date">{{e.date_debut}}</div>
                                         <div class="titre">{{e.name}}</div>
-                                        <div class="lieu">
+                                        <div class="lieu" ng-if="choix!='save'">
                                             <ff translate>Prix</ff> : <span class="blue bold">{{e.montant}} Fcfa</span> |
                                             <ff translate>Nombre de ticket</ff> : <span class="blue bold">{{e.quantite}}</span>
                                             <!--Commande n° {{e.billet.numero_commande}} de {{e.billet.quantity}} Billets le {{e.billet.date}} -->
