--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -15,7 +15,7 @@
              dir-paginate="e in events |filter:searchKey | orderBy : '-created_at' : false| itemsPerPage: par_page "
         >
             <div class="col-lg-3">
-                <div ui-sref="details({nom:e.name+'/'+e.id})" class="image" style="height:100px; cursor: pointer">
+                <div ui-sref="details({nom:e.name+'|'+e.id})" class="image" style="height:100px; cursor: pointer">
                     <img ng-src="{{e.banner_picture}}" class="img-responsive" alt="{{e.name}}"/>
                 </div>
                 <div class="price" ng-if="e.tickets[0].amount!=undefined">
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="col-lg-9">
-                <div class="item-9" ui-sref="details({nom:e.name+'/'+e.id})">
+                <div class="item-9" ui-sref="details({nom:e.name+'|'+e.id})">
                     <div class="date">du {{e.date_debut}} au {{e.date_fin}}</div>
                     <div class="titre">{{e.name}}</div>
                     <div class="lieu" style="position: absolute;bottom: 0;">{{e.adress.name}}, {{e.town.name}}</div>
