correction du ticket et du background et du birthdate

--- a/public/templates/event/detail-events.html
+++ b/public/templates/event/detail-events.html
@@ -1,4 +1,4 @@
-<div class="intro-header" style="background: url('/../..{{event.banner_picture}}');background-size: cover">
+<div class="intro-header" style="background-image: url('{{event.banner_picture}}');background-size: cover;">
     <div class="container">
 
         <div class="row">
