Ajout des reset des password

--- a/public/templates/auth/login.html
+++ b/public/templates/auth/login.html
@@ -17,7 +17,7 @@
             <button type="submit" class="btn btn-primary btn-main btn-green" translate> Connectez-vous</button>
         </div>
         <div style="margin-top: 15px;text-align: center">
-            <a href="" ui-sref="reset" translate>Mot de passe oublié?</a>
+            <a href="" ui-sref="forgot" translate>Mot de passe oublié?</a>
         </div>
     </form>
 
