Modification de personne Fixation du footer Fixation de l'image

--- a/public/templates/user/index.html
+++ b/public/templates/user/index.html
@@ -33,7 +33,7 @@
                                 <!--<li ng-class="{'active':choix=='carte'}" ng-click="choix='carte'"><a ui-sref="carte"-->
                                                                                                      <!--translate>Cartes-->
                                     <!--bancaires</a></li>-->
-                                <li><a ui-sref="close" translate>Fermer le compte</a></li>
+                                <!--<li><a ui-sref="close" translate>Fermer le compte</a></li>-->
                             </ul>
                         </div>
                     </div>
