--- a/public/templates/admin/index.html
+++ b/public/templates/admin/index.html
@@ -22,6 +22,7 @@
   <div ui-view=""></div>
 
   <script src="source/ng-admin.min.js"></script>
+<script src="source/auth.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
