Edite Event : ok > Editer image Evaris Langue Reset et forgot

--- a/public/templates/auth/forgot.html
+++ b/public/templates/auth/forgot.html
@@ -6,8 +6,7 @@
     <form class="form-signin" ng-submit="forgot()">
         <h2 class="text-center" translate>Reinitialiser le mot de passe.</h2>
         <p class="text-default" translate>
-            Saisissez votre adresse e-mail et nous vous enverrons un lien par e-mail pour réinitialiser votre mot de
-            passe.
+            Saisissez votre adresse e-mail et nous vous enverrons un lien par e-mail pour réinitialiser votre mot de passe.
         </p>
         <div class="form-group">
             <input type="text" class="form-control" ng-model="email" placeholder="{{'Adresse email'|translate}}"
@@ -18,7 +17,7 @@
         </div>
 
         <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-main" translate> Envoyer</button>
+            <button type="submit" class="btn btn-primary btn-main" translate>Envoyer</button>
         </div>
 
     </form>
