--- a/public/templates/user/gerer-event.html
+++ b/public/templates/user/gerer-event.html
@@ -66,10 +66,10 @@
                                         <li><a ui-sref="panneau({id:e.id})"><i class="fa fa-gear"></i>
                                             <ff translate>Gérer</ff>
                                         </a></li>
-                                        <li><a ui-sref="create({id:e.id,target:'modifier'})"><i class="fa fa-edit"></i>
+                                        <li><a ui-sref="edit({id:e.id})"><i class="fa fa-edit"></i>
                                             <ff translate>Modifier</ff>
                                         </a></li>
-                                        <li><a ui-sref="details({nom:e.name+'/0000'+e.id})"><i class="fa fa-eye"></i>
+                                        <li><a ui-sref="details({nom:e.name+'|0000'+e.id})"><i class="fa fa-eye"></i>
                                             <ff translate>Afficher</ff>
                                         </a></li>
                                     </ul>
